Update demo-app